--- a/Refreshing JS/10th_code_objects.html
+++ b/Refreshing JS/10th_code_objects.html
@@ -35,7 +35,7 @@
 	console.log(ourDog.legs)
 
 	//adding property
-	ourDog.bark="bowow"
+	ourDog.bark="bow-wow"
 
 	console.log(ourDog.bark)
 </script>
