--- a/Refreshing JS/runner.html
+++ b/Refreshing JS/runner.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title></title>
-	<script type="text/javascript" src="12th_code_while_loop.js"></script>
+	<script type="text/javascript" src="12th_code_loops.js"></script>
 </head>
 <body>
 
