--- a/Refreshing JS/runner.html
+++ b/Refreshing JS/runner.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title></title>
-	<script type="text/javascript" src="12th_code_loops.js"></script>
+	<!--<script type="text/javascript" src="12th_code_loops.js"></script>-->
+	<script type="text/javascript" src="13th_code_property_retriever.js"></script>
 </head>
 <body>
 
