--- a/Refreshing JS/runner.html
+++ b/Refreshing JS/runner.html
@@ -3,7 +3,8 @@
 <head>
 	<title></title>
 	<!--<script type="text/javascript" src="12th_code_loops.js"></script>-->
-	<script type="text/javascript" src="13th_code_property_retriever.js"></script>
+	<!--<script type="text/javascript" src="13th_code_property_retriever.js"></script>-->
+	<script type="text/javascript" src="14th_code.js"></script>
 </head>
 <body>
 
